adding img of puppy

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <main>
         <section class="back-sizer">
           <!-- we're using this section to play with background images -->
+           <img srcset="
+           images/puppy-2.0.jpg 2x,
+           images/puppy-3.0.jpg 3x"
+        src="images/puppy-1.0.jpg" alt="A white puppy standing in short grass">
         </section>
         <section>
             <!-- this section is for playing with srcset -->
