--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <main>
         <section class="back-sizer">
           <!-- we're using this section to play with background images -->
-           <img srcset="
-           images/puppy-2.0.jpg 2x,
-           images/puppy-3.0.jpg 3x"
-        src="images/puppy-1.0.jpg" alt="A white puppy standing in short grass">
         </section>
         <section>
             <!-- this section is for playing with srcset -->
+             <img srcset="
+           images/puppy-2.0.jpg 2x,
+           images/puppy-3.0.jpg 3x"
+        src="images/puppy-1.0.jpg" alt="A white puppy standing in short grass">
             <img src="images/puppy-1.0.jpg" alt="A white puppy standing in short grass">
+            <!-- the above x means pixel density, depending on the device you are using -->
         </section>
 
         <section class="test2">
